For 1.14:
	- Threading problem in ProdCon fixed - mainly seen in EAI code.
	
	- Added NavigationInfo speed field values to FLY mode rotations and
	  translations.

	- fixed bug in Javascript invocation dealing with multi float
	  (3F, 4F) values. 

For 1.13:
	- Now use freely distributable font files. See the README in the
	  fonts directory.

	- EXTERNPROTOS can now reference PROTOS in the Extern'd file.

	- freewrlSystem now keeps a list of children; on doQuit it attempts
	  to remove these children from the system with a kill (child,SIGINT).
	  This solves a problem where wget can hang and leave the freewrl 
	  display thread around.

	- fixed a problem that caused add/remove children from EAI and
	  scripts to fail (segfault)

	- revised error messages where some field values are incorrect;
	  eg, putting a TextureCoord as a coord field of an IndexedFaceSet
	  now displays a more informative message.

	- Builds on 64 bit processors. Some scripting/EAI/CLASS links not
	  yet correct.

	- ColorRGBA nodes supported for IndexedFaceSet, and equiv. NOT
	  supported in scripting/eai yet.

	- updated Javascript version - new Mozilla SpiderMonkey version
	  is 1.5.

	- Javascripting - MF nodes and script to script routing now is
	  much better (may still be bugs, but it works for my tests)

	- EAI code changed so that the current Browser timestamp is
	  delivered to the EAI side of things. Right now, the EAI
	  java code (EAIinThread.java) reads and parses this time 
	  value, but does not do anything with it.

	- added all Triangle nodes - code was written in less than a 
	  day, so bugs may exist - it does however run the X3D Triangle
	  conformance tests successfully.

	- EAI EventOutMFFloat, EventOutMFVec2f, EventOutMFVec3f,
	  EventOutMFColor, EventOutMFRotation EventOutMFInt32 all revisited.

	- X3D - initial support for containerField.